<resources>
    <string name="app_name">Peter App</string>
    <string name="ToggleButtonEdit">Edit</string>
    <string name="ButtonSave">Save</string>

<!--    Fields-->
    <string name="textContact">Contact:</string>
    <string name="textAddress">Address:</string>
    <string name="textHomePhone">Home Phone:</string>
    <string name="textCellPhone">Cell Phone:</string>
    <string name="textEmail">Email:</string>
    <string name="textBirthday">Birthday:</string>
    <string name="textBestFriend">Best Friend Forever:</string>


    <!--    Date Picker-->
    <string name="buttonCancel">Cancel</string>
    <string name="buttonSelect">Select</string>

<!--    Setting labels-->
    <string name="textContactSort">Sort Contacts By:</string>
    <string name="textViewSortOrder">Sort Order:</string>
    <string name="textSetColor">Sort Order:</string>

<!--    Radio Buttons-->
    <string name="radioName">Name</string>
    <string name="radioCity">City</string>
    <string name="radioBirthday">Birthday</string>
    <string name="radioAscending">Ascending</string>
    <string name="radioDescending">Descending</string>
    <string name="radioColorLightGreen">Light Green</string>
    <string name="radioColorGold">Gold</string>
    <string name="radioColorLightPurple">Light Purple</string>

<!--    list_item-->
    <string name="textContactName">Contact Name</string>
    <string name="textHomeNumber">Home Phone</string>
    <string name="textCellNumber">Cell Phone</string>
    <string name="textListAddress">Address</string>
    <string name="textButtonDeleteContact">Delete</string>

<!--Contact List Button Label-->
    <string name="contactListButtonDelete">Delete</string>
    <string name="contactListButtonAdd">Add Contact</string>

<!--Map Page Labels-->
    <string name="buttonGetCoordinate">Get Coordinates</string>
    <string name="textLatitude">Latitude: </string>
    <string name="textLongitude">Longitude: </string>
    <string name="textAccuracy">Accuracy: </string>
    <string name="textNone">None</string>
    <string name="buttonSatelliteView">Satellite View</string>

<!--Exercise 5.1/5.2 view_lat_lng_acc Labels-->
    <string name="textNetworkSensor">Network Sensor</string>
    <string name="textGPSSensor">GPS Sensor</string>
    <string name="textBestLocation">Best Location</string>
    <string name="textHolderNetworkLatitude">None</string>
    <string name="textHolderNetworkLongitude">None</string>
    <string name="textHolderNetworkAccuracy">None</string>
    <string name="textButtonGotoMap">Back to Map</string>





    <!--    <string name="contact_icon">Contacts</string>-->
<!--    <string name="settings_icon">Settings</string>-->
<!--    <string name="map">Map</string>-->
<!--    <string name="save_button">Save</string>-->
<!--    <string name="contact">Contact:</string>-->
<!--    <string name="address">Address:</string>-->
<!--    <string name="home_phone">Home Phone:</string>-->
<!--    <string name="cell_phone">Cell Phone:</string>-->
<!--    <string name="toggle_button">Toggle Button</string>-->
<!--    <string name="email">EMail:</string>-->
<!--    <string name="birthday">Birthday:</string>-->

</resources>
