<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textContactName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/system_blue"
            android:text="@string/textContactName"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/textListAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_below="@+id/textContactName"
            android:text="@string/textListAddress" />

        <TextView
            android:id="@+id/textHomeNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_below="@+id/textListAddress"
            android:text="@string/textHomeNumber" />

        <TextView
            android:id="@+id/textCellNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/textHomeNumber"
            android:text="@string/textCellNumber" />



        <ImageView
            android:id="@+id/imageBestFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="31dp"
            android:layout_alignTop="@+id/textContactName"
            android:layout_toEndOf="@+id/textContactName"
            android:layout_toRightOf="@+id/textContactName"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <Button
            android:id="@+id/buttonDeleteContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/system_red"
            android:background="@color/system_transparent"
            android:visibility="invisible"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_alignTop="@+id/textContactName"
            android:layout_alignBottom="@+id/textCellNumber"
            android:text="@string/textButtonDeleteContact" />

    </RelativeLayout>


</RelativeLayout>