<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mycontactlist.ContactActivity">

<!--    Dummy Layout to catch initial autofocus-->
    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px" />

<!--    Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="0dp"
        android:background="@color/toolbar_background"
        android:paddingTop="10dp"
        android:scrollbarSize="4dp">

        <ToggleButton
            android:id="@+id/toggleButtonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:text="@string/ToggleButtonEdit"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:text="@string/ButtonSave"
            android:textSize="18sp" />

    </RelativeLayout>

<!--    Navigation Bar-->
    <RelativeLayout
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/navbar_background"
        android:layout_alignParentBottom="true" >


        <ImageButton
            android:id="@+id/imageButtonList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_toStartOf="@+id/imageButtonMap"
            android:layout_toLeftOf="@+id/imageButtonMap"
            app:srcCompat="@drawable/icons8_contact_details_64" />

        <ImageButton
            android:id="@+id/imageButtonMap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/icons8_map_marker_64" />

        <ImageButton
            android:id="@+id/imageButtonSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_toEndOf="@+id/imageButtonMap"
            android:layout_toRightOf="@+id/imageButtonMap"
            app:srcCompat="@drawable/icons8_settings_64" />

    </RelativeLayout>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/navbar"
        android:background="@color/exercise_background_color">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/textContact" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/textContact"
                android:ems="14"
                android:imeOptions="actionNext"
                android:inputType="textCapWords" />
            <!--            android:inputType="textPersonName"-->
            <!--            android:text="Name" />-->
            <requestFocus />

            <TextView
                android:id="@+id/textAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/editName"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/textAddress" />

            <EditText
                android:id="@+id/editAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/textAddress"
                android:ems="14"
                android:imeOptions="actionNext"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/editCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_below="@+id/editAddress"
                android:ems="8"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/editState"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/editState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/editCity"
                android:layout_toEndOf="@+id/editCity"
                android:layout_alignBottom="@+id/editCity"
                android:ems="2"
                android:maxLength="2"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/editZipcode"
                android:inputType="textCapCharacters" />

            <EditText
                android:id="@+id/editZipcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/editState"
                android:layout_toEndOf="@+id/editState"
                android:layout_alignBottom="@+id/editState"
                android:ems="5"
                android:maxLength="5"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/editHome"
                android:inputType="numberSigned" />

            <TextView
                android:id="@+id/textHome"
                android:text="@string/textHomePhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/editCity" />

            <EditText
                android:id="@+id/editHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/textHome"
                android:ems="7"
                android:maxLength="14"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/editCell"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textCell"
                android:text="@string/textCellPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/textHome"
                android:layout_alignLeft="@+id/editCell"
                android:layout_alignStart="@+id/editCell" />

            <EditText
                android:id="@+id/editCell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/editHome"
                android:layout_toEndOf="@+id/editHome"
                android:layout_alignBottom="@+id/editHome"
                android:ems="7"
                android:maxLength="14"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/editEmail"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textEmail"
                android:text="@string/textEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/editHome" />

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_below="@+id/textEmail"
                android:ems="13"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textBday"
                android:text="@string/textBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/editEmail" />

            <TextView
                android:id="@+id/textBirthday"
                android:text="01/01/1970"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_toRightOf="@+id/textBday"
                android:layout_toEndOf="@+id/textBday"
                android:layout_alignBottom="@+id/textBday" />

            <Button
                android:id="@+id/btnBirthday"
                android:text="Change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"
                android:layout_alignBaseline="@+id/textBirthday" />


        </RelativeLayout>




    </ScrollView>


</RelativeLayout>